--- a/chart/cas-cif/templates/cronJobs/deploy-data.yaml
+++ b/chart/cas-cif/templates/cronJobs/deploy-data.yaml
@@ -47,7 +47,7 @@ spec:
                 - |
                   set -euo pipefail;
                   sqitch deploy;
-                  if [[ "$NAMESPACE" == *-dev || "$NAMESPACE" == *-test ]]; then
+                  if [[ "$NAMESPACE" == *-dev ]]; then
                   for file in data/dev/*.sql; do
                     psql -v "ON_ERROR_STOP=1" -d cif -f "${file}";
                   done;
