--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -9,4 +9,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: ./.bin/sqitch-last-change-is-tag.sh
+      - run: ./.bin/sqitch-last-change-is-tag.sh schema
