docs: update .env.example

--- a/app/.env.example
+++ b/app/.env.example
@@ -6,4 +6,14 @@ SENTRY_RELEASE=<any sentry release tag. 'local_development' or anything can be u
 # It needs to be associated with a service account with write permissions
 GOOGLE_APPLICATION_CREDENTIALS=</Users/user/documents/ggl-cas-storage-localdev.json>
 ATTACHMENTS_BUCKET=<the name of the bucket where to read and store attachments>
+
+# These variables control feature flagging
 GROWTHBOOK_API_KEY=<API key for the growthbook feature flagging service>
+BYPASS_GROWTHBOOK=<true or false>
+
+# This variable allows you to toggle the keycloak login screen on and off
+SHOW_KC_LOGIN=<true or false>
+
+# These variables allow mocking times and authentication during e2e testing
+ENABLE_MOCK_TIME=<true or false>
+ENABLE_MOCK_AUTH=<true or false>
